CREACION HTML 8 CANTOS POPULARES

--- a/08-cantos-populares-tradicionales.html
+++ b/08-cantos-populares-tradicionales.html
@@ -40,7 +40,8 @@
             </ul>
         </div> -->
         <div class="topnav">
-            <a href="https://ethosnaval.cl" class="active"><img src="images/ethos-naval-logo.png" alt="" style="width:160px; height:64px;"></a>
+            <a href="https://ethosnaval.cl" class="active"><img src="images/ethos-naval-logo.png" alt=""
+                    style="width:160px; height:64px;"></a>
             <div id="myLinks">
                 <a href="01-himnos-nacionales.html">HIMNOS NACIONALES</a>
                 <a href="02-himnos-institucionales.html">HIMNOS INSTITUCIONALES</a>
@@ -62,10 +63,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/adios_7linea.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>01 - ADIOS AL 7° DE LÍNEA</h3>
+                    <h3>01 - BAJANDO PA' PUERTO AYSÉN</h3>
                 </div>
             </div>
 
@@ -74,10 +75,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/bateria280.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>02 - BATERÍA 280</h3>
+                    <h3>02 - CACHUREO</h3>
                 </div>
             </div>
 
@@ -86,10 +87,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/bravos_soldados_mar.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>03 - BRAVOS SOLDADOS DEL MAR</h3>
+                    <h3>03 - CHILE</h3>
                 </div>
             </div>
         </div>
@@ -101,10 +102,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/cancion_infantes.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>04 - CANCIÓN DE LOS INFANTES</h3>
+                    <h3>04 - CHILE LINDO</h3>
                 </div>
             </div>
             <div class="box" data-src="canciones/">
@@ -112,10 +113,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/cancion_yungay.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>05 - CANCIÓN DE YUNGAY</h3>
+                    <h3>05 - CHILOTE MARINO</h3>
                 </div>
             </div>
 
@@ -124,10 +125,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/corazones_robles.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>05 - CORAZONES DE ROBLE</h3>
+                    <h3>06 - CURA DE MI PUEBLO</h3>
                 </div>
             </div>
 
@@ -140,10 +141,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/gloria_victoria.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>06 - GLORIA Y VICTORIA</h3>
+                    <h3>06 - DOÑA JAVIERA CARRERA</h3>
                 </div>
             </div>
             <div class="box" data-src="canciones/">
@@ -151,10 +152,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/honores_caidos.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>07 - HONORES A LOS CAÍDOS</h3>
+                    <h3>07 - EL CORRELERO</h3>
                 </div>
             </div>
 
@@ -163,10 +164,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/bicentenario_armada.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>08 - HIMNO BICENTENARIO DE LA ARMADA DE CHILE</h3>
+                    <h3>08 - EL GUATÓN LOYOLA</h3>
                 </div>
             </div>
 
@@ -179,10 +180,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/infanteria_ejercito.jpeg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>09 - HIMNO DE LA INFANTERÍA DEL EJÉRCITO CHILENO</h3>
+                    <h3>09 - EL REY</h3>
                 </div>
             </div>
             <div class="box" data-src="canciones/">
@@ -190,10 +191,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/himno_seccion.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>10 - HIMNO DE LA SECCIÓN</h3>
+                    <h3>10 - EL CURANTO</h3>
                 </div>
             </div>
 
@@ -202,10 +203,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/lili_marleen.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>11 - LILI MARLEEN</h3>
+                    <h3>11 - EN ALTA MAR</h3>
                 </div>
             </div>
 
@@ -218,10 +219,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/losque_nuncavolveran.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>12 - LOS QUE NUNCA VOLVERÁN</h3>
+                    <h3>12 - JURAMENTADOS DE ATACAMA</h3>
                 </div>
             </div>
             <div class="box" data-src="canciones/">
@@ -229,10 +230,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/mifusil.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>13 - MI FUSIL Y YO</h3>
+                    <h3>13 - GUANTANAMERA</h3>
                 </div>
             </div>
 
@@ -241,10 +242,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/naval.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>14 - NAVAL</h3>
+                    <h3>14 - LA BATELERA</h3>
                 </div>
             </div>
 
@@ -257,10 +258,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/panzerlied.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>15 - PANZERLIED</h3>
+                    <h3>15 - LA JOYA DEL PACÍFICO</h3>
                 </div>
             </div>
             <div class="box" data-src="canciones/">
@@ -268,10 +269,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/soldado_mar.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>16 - SOLDADOS DE MAR</h3>
+                    <h3>16 - LAS BOMBACHAS COLORADAS</h3>
                 </div>
             </div>
 
@@ -280,10 +281,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/tambores.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>17 - TAMBORES Y CLARINES</h3>
+                    <h3>17 - LOS BOTEROS DE IQUIQUE</h3>
                 </div>
             </div>
 
@@ -296,10 +297,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/torreones_oro.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>18 - TORREONES DE ORO</h3>
+                    <h3>18 - MANCHA ROJA</h3>
                 </div>
             </div>
             <div class="box" data-src="canciones/">
@@ -307,10 +308,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/yamarcha_infanteria.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>19 - YA MARCHA LA INFANTERÍA</h3>
+                    <h3>19 - NEW YORK, NEW YORK</h3>
                 </div>
             </div>
 
@@ -319,14 +320,128 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/camarada.jpg" alt="">
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>20 - YO TENÍA UN CAMARADA</h3>
+                    <h3>20 - ORO PURITO</h3>
                 </div>
             </div>
         </div>
         <!-- FIN 7TA FILA-->
+        <!--8VA FILA-->
+        <div class="box-container">
+            <div class="box" data-src="">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>21 - PUNTA ARENAS</h3>
+                </div>
+            </div>
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>22 - PUERTO MONTT</h3>
+                </div>
+            </div>
+
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>23 - RÍO-RÍO</h3>
+                </div>
+            </div>
+        </div>
+        <!-- FIN 8VA FILA-->
+         <!--9NA FILA-->
+        <div class="box-container">
+            <div class="box" data-src="">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>24 - SAU- SAU</h3>
+                </div>
+            </div>
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>25 - SI VAS PARA CHILE</h3>
+                </div>
+            </div>
+
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>26 - TÓMESE ESA COPA</h3>
+                </div>
+            </div>
+        </div>
+        <!-- FIN 9NA FILA-->
+         <!--10MA FILA-->
+        <div class="box-container">
+            <div class="box" data-src="">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>27 - TONADAS DE MANUEL RODRÍGUEZ</h3>
+                </div>
+            </div>
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>28 - YO VENDO UNOS OJOS NEGROS</h3>
+                </div>
+            </div>
+
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/08-IMG-CANCIONES-POPULARES/folklore-chileno.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>29 - ZAMBA DE MI ESPERANZA</h3>
+                </div>
+            </div>
+        </div>
+        <!-- FIN 10MA FILA-->
 
     </div>
     </div>
