ACTUALIZACION DE MENU

--- a/01-himnos-nacionales.html
+++ b/01-himnos-nacionales.html
@@ -41,6 +41,7 @@
         <div class="topnav">
             <a href="https://ethosnaval.cl" class="active"><img src="images/ethos-naval-logo.png" alt="" style="width:160px; height:64px;"></a>
             <div id="myLinks">
+                <a href="index.html">INICIO</a>
                 <a href="01-himnos-nacionales.html">HIMNOS NACIONALES</a>
                 <a href="02-himnos-institucionales.html">HIMNOS INSTITUCIONALES</a>
                 <a href="03-himnos-escuelas.html">HIMNOS DE ESCUELAS</a>
