--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
     <div class="centered-menu">
         <ul>
-          <li class="active"><a href="https://ethosnaval.cl" active>INICIO</a></li>
+          <li class="active"><a href="index.html" active>INICIO</a></li>
           <li class="collapse-toggle"></li>
           <li><a href="https://ethosnaval.cl/historia/">HISTORIA</a></li>
           <li><a href="https://ethosnaval.cl/tradiciones-navales/">TRADICIONES NAVALES</a></li>
