Actualización himnos escuelas - nombre escuela carabineros mp3

--- a/03-himnos-escuelas.html
+++ b/03-himnos-escuelas.html
@@ -109,7 +109,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela-carabineros.mp3">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela_carabineros.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
