--- a/06-himnos-especialidades.html
+++ b/06-himnos-especialidades.html
@@ -59,7 +59,7 @@
         </div>
         <h1 class="heading2">06 - HIMNOS DE ESPECIALIDADES</h1>
         <div class="box-container">
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\06-SOUND-HIMNOS-ESPECIALIDADES\som.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\06-SOUND-HIMNOS-ESPECIALIDADES\abastecimiento.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -136,7 +136,7 @@
         <!-- FIN 2DA FILA-->
         <!--3ERA FILA-->
         <div class="box-container">
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\06-SOUND-HIMNOS-ESPECIALIDADES\faros.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -159,7 +159,7 @@
                     <h3>08 - HIMNO DE LA ESPECIALIDAD DE INTELIGENCIA NAVAL</h3>
                 </div>
             </div>
-            <div class="box" data-src="">
+            <div class="box" data-src="canciones\06-SOUND-HIMNOS-ESPECIALIDADES\litoral.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
