--- a/07-marchas-canciones.html
+++ b/07-marchas-canciones.html
@@ -58,7 +58,7 @@
         </div>
         <h1 class="heading2">07 - MARCHAS - CANCIONES</h1>
         <div class="box-container">
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\adios_7_linea.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\bateria280.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -120,7 +120,7 @@
                 </div>
             </div>
 
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\corazones_roble.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -136,7 +136,7 @@
         <!-- FIN 2DA FILA-->
         <!--3ERA FILA-->
         <div class="box-container">
-            <div class="box" data-src="">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\gloria_victoria.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -147,7 +147,7 @@
                     <h3>06 - GLORIA Y VICTORIA</h3>
                 </div>
             </div>
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\honores_caidos.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -198,7 +198,7 @@
                 </div>
             </div>
 
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\lili_marleen.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -214,7 +214,7 @@
         <!-- FIN 4TA FILA-->
         <!--5TA FILA-->
         <div class="box-container">
-            <div class="box" data-src="">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\los_que_nunca_volveran.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -237,7 +237,7 @@
                 </div>
             </div>
 
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\naval.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -264,7 +264,7 @@
                     <h3>15 - PANZERLIED</h3>
                 </div>
             </div>
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\soldados_de_mar.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -276,7 +276,7 @@
                 </div>
             </div>
 
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\tambores_clarines.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -292,7 +292,7 @@
         <!-- FIN 6TA FILA-->
         <!--7TA FILA-->
         <div class="box-container">
-            <div class="box" data-src="">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\torreones_oro.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -303,7 +303,7 @@
                     <h3>18 - TORREONES DE ORO</h3>
                 </div>
             </div>
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\ya_marcha_infanteria.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
@@ -315,7 +315,7 @@
                 </div>
             </div>
 
-            <div class="box" data-src="canciones/">
+            <div class="box" data-src="canciones\07-SOUND-MARCHAS-CANCIONES\yo_tenia_un_camarada.mp3">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
